transmitting content from file

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<h1>Khello</h1>
+HTTP/1.1 200 OK
+Content-Type: text/html
+Content-Lenght: 74
+
+<!DOCTYPE html>
+<html>
+<head></head>
+<body><h1>Khello</h1></body>
+</html>
